# practice-rust

./: Cargo.toml
src/: main.rs  utils.rs
src/database/: mod.rs
src/models/: user.rs
src/routes/: home.rs
src/routes/auth/: login.rs
